# Yunitto

./: CMakeLists.txt  _build.sh  run.sh  run_cli.sh  run_gui.sh
include/: asset.h  portfolio.h  portfoliomanager.h  transaction.h
include/cli/: cliview.h
include/controller/: controller.h  controllerwrapper.h
include/core/: asset.h  portfolio.h  portfoliomanager.h  transaction.h
include/views/: cliview.h
resources/qml/: main.qml
src/: CMakeLists.txt  asset.cpp  portfoliomanager.cpp  temp.cpp  transaction.cpp
src/cli/: CMakeLists.txt  cliview.cpp  main.cpp
src/controller/: controller.cpp  controllerwrapper.cpp
src/core/: asset.cpp  portfolio.cpp  portfoliomanager.cpp  temp.cpp  transaction.cpp
src/gui/: CMakeLists.txt  main.cpp  resources.qrc
src/gui/resources/qml/: asset.qml  main.qml  portfolio.qml  portfoliomanager.qml
src/views/: cliview.cpp
